Don't drop the old sheet when "rel" changes from one value that contains"stylesheet" to anoher.  Bug 360746, r+sr=sicking